<resources>
    <string name="app_name">CocktailOverview</string>
    <string name="cocktail_image_description">cocktail image</string>
    <string name="id">id: %1$s</string>
    <string name="glass">Serve in %1$s</string>
    <string name="ingredients">Ingredients</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="connection_error_swipe_to_retry">CONNECTION ERROR\nSWIPE TO RETRY</string>
    <string name="title_main">Main</string>
    <string name="title_categories">Categories</string>
    <string name="title_favorite">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="something_went_wrong">Something went wrong =\\</string>
    <string name="search">Search</string>
    <string name="connection_error">Connection error</string>
    <string name="nothing_found">Nothing found</string>
    <string name="cocktail_name">Cocktail name</string>
    <string name="cocktail_id">Cocktail id</string>
</resources>