<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_color_primary"
    tools:context=".MainActivity"
    >

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/onboardingViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/view_pager_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/viewCenterOfNext" />

    <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
        android:id="@+id/worm_dots_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:dotsColor="@color/custom_color_secondary"
        app:dotsStrokeColor="@color/custom_color_primary"
        app:dotsCornerRadius="8dp"
        app:dotsSize="12dp"
        app:dotsSpacing="2dp"
        app:dotsStrokeWidth="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/skipTextView"
        app:layout_constraintBottom_toBottomOf="@id/skipTextView"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/skipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:letterSpacing="0.1"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textColor="@color/custom_color_primary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@drawable/icon_outer_background"
        app:layout_constraintStart_toStartOf="@id/imageNext"
        app:layout_constraintEnd_toEndOf="@id/imageNext"
        app:layout_constraintTop_toTopOf="@id/imageNext"
        app:layout_constraintBottom_toBottomOf="@id/imageNext"/>

    <View
        android:id="@+id/viewCenterOfNext"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="@id/imageNext"
        app:layout_constraintEnd_toEndOf="@id/imageNext"
        app:layout_constraintTop_toTopOf="@id/imageNext"
        app:layout_constraintBottom_toBottomOf="@id/imageNext"/>

    <ImageView
        android:id="@+id/imageNext"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/icon_background"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_right"
        app:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonGetStarted"
        android:layout_marginBottom="50dp"/>
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonGetStarted"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        style="@style/MaterialButtonStyle"
        android:text="@string/get_started"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:cornerRadius="20dp"
        android:enabled="false" />

</androidx.constraintlayout.widget.ConstraintLayout>