<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingBottom="20dp">

            <LinearLayout
                android:id="@+id/cocktailInfoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_vertical"
                android:orientation="vertical"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/cocktail_image_description"
                    app:srcCompat="@drawable/ic_baseline_broken_image_24" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="center_vertical">
                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="36sp"
                        android:textStyle="bold"
                        tools:text="COCKTAIL NAME"
                        android:layout_weight="9" />
                    <ImageView
                        android:id="@+id/favoriteImageView"
                        android:layout_width="35dp"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_baseline_favorite_border"/>

                </LinearLayout>



                <TextView
                    android:id="@+id/tv_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="20sp"
                    android:textColor="@color/gray"
                    tools:text="id" />

                <TextView
                    android:id="@+id/tv_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:textSize="26sp"
                    tools:text="category" />

                <TextView
                    android:id="@+id/tv_alcoholic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="26sp"
                    tools:text="alcoholic" />

                <TextView
                    android:id="@+id/tv_glass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="26sp"
                    tools:text="glass" />

                <TextView
                    android:id="@+id/tv_ingredients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/ingredients"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    app:layout_constrainedWidth="true" />

                <TextView
                    android:id="@+id/tv_ingredients_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="26sp"
                    tools:text="Ingredient 1 \nIngredient 2 \nIngredient 3" />

            </LinearLayout>


            <ProgressBar
                android:id="@+id/cocktailProgressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/cocktailErrorTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connection_error_swipe_to_retry"
                android:textAlignment="center"
                android:textSize="32sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>